--- a/FI.WebAtividadeEntrevista/Views/Shared/_Layout.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/jtable")
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/inputmask")
+    <script src="~/Scripts/jquery.mask.min.js"></script>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
