--- a/FI.WebAtividadeEntrevista/Views/Cliente/Forms.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Cliente/Forms.cshtml
@@ -109,26 +109,35 @@
                     <div class="row">
                         <div class="col-md-5">
                             <div class="form-group">
-                                <input required="required" type="text" class="form-control" id="CPF" name="CPF" placeholder="Ex.: 999.999.999-99" maxlength="14">
+                                <input required="required" type="text" class="form-control" id="CPFBeneficiario" " name="CPF" placeholder="Ex.: 999.999.999-99" maxlength="14">
                             </div>
                         </div>
                         <div class="col-md-5">
                             <div class="form-group">
-                                <input required="required" type="text" class="form-control" id="Nome" name="Nome" placeholder="Ex.: João" maxlength="50">
+                                <input required="required" type="text" class="form-control" id="NomeBeneficiario" name="Nome" placeholder="Ex.: João" maxlength="50">
                             </div>
                         </div>
                         <div class="pull-right">
                             <button type="submit" class="btn btn-sm btn-success" id="btnIncluirBeneficiario">Incluir</button>
                         </div>
                     </div>
-                     <div class="row">
-                        <table id="gridBeneficiarios" class="table"></table>
+                    <div class="table-responsive">
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th>CPF</th>
+                                    <th>Nome</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                        </table>
                     </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-
 </form>
