[BUGIFX]  Retirando verificação de existentencia na alteração de Cliente

--- a/FI.WebAtividadeEntrevista/Views/Cliente/Alterar.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Cliente/Alterar.cshtml
@@ -9,6 +9,7 @@
         var urlRetorno = '@Url.Action("Index", "Cliente", new { area = "" })';
         var urlBeneficiariosList = '@Url.Action("BeneficiariosList", "Cliente", new { area = "" })';
         var urlAlteracaoBeneficiarios = '@Url.Action("AlterarBeneficiarios", "Cliente", new { area = "" })';
+        var urlVerificarCPF = '@Url.Action("VerificarCPFBeneficiario", "Cliente", new { area = "" })';
     </script>
     @Scripts.Render("~/bundles/altClientes")
 }
