--- a/FI.WebAtividadeEntrevista/Views/Cliente/Incluir.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Cliente/Incluir.cshtml
@@ -6,6 +6,8 @@
     <script>
         var urlPost = '@Url.Action("Incluir", "Cliente", new { area = "" })';
         var urlBeneficiariosList = '@Url.Action("BeneficiariosList", "Cliente", new { area = "" })';
+        var urlVerificarCPF = '@Url.Action("VerificarCPFBeneficiario", "Cliente", new { area = "" })';
+        var urlIncluirBeneficiario = '@Url.Action("IncluirBeneficiario", "Cliente", new { area = "" })';
     </script>
     @Scripts.Render("~/bundles/clientes")
 }
