[BUGFIX] Bug de vir com model beneficiario com cpf e nome null

--- a/FI.WebAtividadeEntrevista/Views/Cliente/Forms.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Cliente/Forms.cshtml
@@ -109,12 +109,12 @@
                     <div class="row">
                         <div class="col-md-5">
                             <div class="form-group">
-                                <input required="required" type="text" class="form-control" id="CPFBeneficiario" " name="CPF" placeholder="Ex.: 999.999.999-99" maxlength="14">
+                                <input type="text" class="form-control" id="CPFBeneficiario" " name="CPF" placeholder="Ex.: 999.999.999-99" maxlength="14">
                             </div>
                         </div>
                         <div class="col-md-5">
                             <div class="form-group">
-                                <input required="required" type="text" class="form-control" id="NomeBeneficiario" name="Nome" placeholder="Ex.: João" maxlength="50">
+                                <input type="text" class="form-control" id="NomeBeneficiario" name="Nome" placeholder="Ex.: João" maxlength="50">
                             </div>
                         </div>
                         <div class="pull-right">
