[BUGFIX] Bsucar de beneficiários na alteração de cliente e alteração de beneficiarios.

--- a/FI.WebAtividadeEntrevista/Views/Cliente/Alterar.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Cliente/Alterar.cshtml
@@ -7,9 +7,12 @@
         var urlPost = '@Url.Action("Alterar", "Cliente", new { area = "" })';
         var obj = @Html.Raw(Json.Encode(Model));
         var urlRetorno = '@Url.Action("Index", "Cliente", new { area = "" })';
+        var urlBuscarCliente = '@Url.Action("Alterar", "Cliente", new { area = "" })';
         var urlBeneficiariosList = '@Url.Action("BeneficiariosList", "Cliente", new { area = "" })';
         var urlAlteracaoBeneficiarios = '@Url.Action("AlterarBeneficiarios", "Cliente", new { area = "" })';
         var urlVerificarCPF = '@Url.Action("VerificarCPFBeneficiario", "Cliente", new { area = "" })';
+        var urlAlterarBeneficiario = '@Url.Action("AlterarBeneficiarios", "Cliente", new { area = "" })';
+        var urlIncluirBeneficiario = '@Url.Action("IncluirBeneficiario", "Cliente", new { area = "" })';
     </script>
     @Scripts.Render("~/bundles/altClientes")
 }
