[ADD] Exclusão de beneficiário

--- a/FI.WebAtividadeEntrevista/Views/Cliente/Alterar.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Cliente/Alterar.cshtml
@@ -13,6 +13,7 @@
         var urlVerificarCPF = '@Url.Action("VerificarCPFBeneficiario", "Cliente", new { area = "" })';
         var urlAlterarBeneficiario = '@Url.Action("AlterarBeneficiarios", "Cliente", new { area = "" })';
         var urlIncluirBeneficiario = '@Url.Action("IncluirBeneficiario", "Cliente", new { area = "" })';
+        var urlExcluirBeneficiario = '@Url.Action("ExcluirBeneficiario", "Cliente", new { area = "" })';
     </script>
     @Scripts.Render("~/bundles/altClientes")
 }
