[ADD] Mascaras de CPF, Telefone e CEP

--- a/FI.WebAtividadeEntrevista/Views/Cliente/Alterar.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Cliente/Alterar.cshtml
@@ -16,6 +16,7 @@
         var urlExcluirBeneficiario = '@Url.Action("ExcluirBeneficiario", "Cliente", new { area = "" })';
     </script>
     @Scripts.Render("~/bundles/altClientes")
+    @Scripts.Render("~/bundles/inputmask")
 }
 <h2>@Html.Raw(ViewBag.Title)</h2>
 @Html.Partial("Forms")
