--- a/FI.WebAtividadeEntrevista/Views/Cliente/Forms.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Cliente/Forms.cshtml
@@ -85,7 +85,7 @@
                 </button>
             </div>
             <div class="pull-right">
-                <button type="submit" class="btn btn-sm btn-success">Salvar</button>
+                <button type="submit" class="btn btn-sm btn-success" id="btnSalvar">Salvar</button>
                 @Html.ActionLink("Voltar", "Index", "Cliente", new { }, new { @class = "btn btn-sm btn-danger" })
             </div>
         </div>
@@ -118,7 +118,7 @@
                             </div>
                         </div>
                         <div class="pull-right">
-                            <button type="submit" class="btn btn-sm btn-success" id="btnIncluirBeneficiario">Incluir</button>
+                            <button type="button" class="btn btn-sm btn-success" id="btnIncluirBeneficiario">Incluir</button>
                         </div>
                     </div>
                     <div class="table-responsive">
