--- a/FI.WebAtividadeEntrevista/Views/Cliente/Incluir.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Cliente/Incluir.cshtml
@@ -10,6 +10,7 @@
         var urlIncluirBeneficiario = '@Url.Action("IncluirBeneficiario", "Cliente", new { area = "" })';
     </script>
     @Scripts.Render("~/bundles/clientes")
+    @Scripts.Render("~/bundles/inputmask")
 }
 <h2>@Html.Raw(ViewBag.Title)</h2>
 @Html.Partial("Forms")
